--- a/main.ipynb
+++ b/main.ipynb
@@ -16,8 +16,7 @@
     "from radon.complexity import cc_visit\n",
     "from radon.metrics import mi_visit\n",
     "from radon.raw import analyze\n",
-    "from transformers import AutoTokenizer, AutoModel\n",
-    "from matplotlib import pyplot as plt"
+    "from transformers import AutoTokenizer, AutoModel"
    ]
   },
   {
@@ -923,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "d6da5630",
    "metadata": {},
    "outputs": [],
